--- a/src/assets/scss/_product.scss
+++ b/src/assets/scss/_product.scss
@@ -332,7 +332,8 @@
       .pro-cart {
         font-size: 14px;
 
-        width: calc(100% - 48px - 48px);
+        width: 100%;
+        //width: calc(100% - 48px - 48px);
 
         transition-delay: 0.1s;
       }
