--- a/src/assets/scss/_sidebar.scss
+++ b/src/assets/scss/_sidebar.scss
@@ -101,12 +101,12 @@
 
               transform: rotate(45deg);
 
-              border: solid white;
-              border-width: 0 2px 2px 0;
-              border-top-width: medium;
-              border-right-width: medium;
-              border-bottom-width: medium;
-              border-left-width: medium;
+              //border: solid white;
+              //border-width: 0 2px 2px 0;
+              //border-top-width: medium;
+              //border-right-width: medium;
+              //border-bottom-width: medium;
+              //border-left-width: medium;
             }
           }
         }
