--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -12,3 +12,13 @@
   padding: 19px 50px 21px;
   border: 1px solid #333;
 }
+
+//.image-thumbnail img {
+//  width: 135px;
+//  //height: 180px;
+//}
+//
+//.image-original img {
+//  width: 600px;
+//  height: 800px;
+//}
