--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -28,7 +28,7 @@
     display: flex;
     align-items: center;
 
-    margin-bottom: 40px;
+    //margin-bottom: 40px;
     .contact-icon {
       margin-right: 20px;
       i {
