--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -1,13 +1,18 @@
 .modal-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0,0,0,0.7);
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 3000;
 }
 
 .modal-card {
+  background-color: #fff;
   min-width: 300px;
   min-height: 100px;
   padding: 40px;
