--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -46,6 +46,11 @@
   margin-right: 5px;
 }
 
+.messenger-icon {
+  width: 15px;
+  margin-right: 5px;
+}
+
 //.image-thumbnail img {
 //  width: 135px;
 //  //height: 180px;
