--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -1100,7 +1100,8 @@
       font-size: 25px;
 
       div:first-child {
-        margin-right: 5px;
+        margin-right: 10px;
+        font-weight: 600;
         @media #{$xs-layout} {
           margin-right: 0;
         }
