--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -28,6 +28,7 @@ $heading-color: #000000;
 $theme-color: #a749ff;
 
 // Responsive Variables
+$xxl-layout: "only screen and (min-width: 1366px)";
 $xx-layout: "only screen and (min-width: 1366px) and (max-width: 1600px)";
 $xl-layout: "only screen and (min-width: 1200px) and (max-width: 1365px)";
 $lg-layout: "only screen and (min-width: 992px) and (max-width: 1199px)";
